# sondio-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01-getting-started.ipynb
src/sondio/: __init__.py  _coerce.py  cli.py  client.py  config.py  earthquakes.py  rail_lines.py  wind_turbines.py
src/sondio/energy/: __init__.py
src/sondio/env/: __init__.py
src/sondio/geo/: __init__.py  subdivisions.py
src/sondio/oilgas/: __init__.py  incidents.py  permits.py  production.py  wells.py
src/sondio/us/: __init__.py
src/sondio/us/cdc/: __init__.py  svi_tracts.py
src/sondio/us/epa/: __init__.py  aquifer_exemptions.py  impaired_waters.py
src/sondio/us/ghg/: __init__.py  facilities.py
src/sondio/us/npdes/: __init__.py  permits.py
src/sondio/us/phmsa/: __init__.py  pipeline_incidents.py
tests/: conftest.py  test_client.py  test_coerce.py  test_config.py  test_geo.py  test_new_modules.py  test_pagination.py
