[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sondio"
version = "0.1.1"
description = "Python SDK for the Sondio data platform — energy and environmental data as pandas DataFrames."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sondio", email = "dev@sondio.io" },
]
keywords = [
    "sondio",
    "energy",
    "environmental",
    "api",
    "sdk",
    "pandas",
    "geospatial",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
]

[project.optional-dependencies]
geo = ["geopandas>=0.14", "shapely>=2.0"]
all = ["geopandas>=0.14", "shapely>=2.0"]
dev = ["pytest>=8.0", "respx>=0.21", "geopandas>=0.14", "shapely>=2.0"]

[project.urls]
Homepage = "https://sondio.io"
Documentation = "https://sondio.io/developers"
Repository = "https://github.com/sondio-io/sondio-python"

[tool.hatch.build.targets.wheel]
packages = ["src/sondio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
